--- a/index.html
+++ b/index.html
@@ -54,50 +54,7 @@
             <div class="container">
                 <h2>Education</h2>
                 <div class="timeline">
-                    <div class="timeline-item left">
-                        <div class="content">
-                            <h3>Bachelor's in Accounting and Auditing</h3>
-                            <span class="year">2017</span>
-                            <div class="info">
-                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
-                                <p><strong>Grade:</strong> 12/20</p>
-                                <p><strong>Period:</strong> 2017 - 2021</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="timeline-item right">
-                        <div class="content">
-                            <h3>Bachelor's in Business Management</h3>
-                            <span class="year">2020</span>
-                            <div class="info">
-                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
-                                <p><strong>Grade:</strong> 12/20</p>
-                                <p><strong>Period:</strong> 2020 - 2023</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="timeline-item left">
-                        <div class="content">
-                            <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
-                            <span class="year">2021</span>
-                            <div class="info">
-                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
-                                <p><strong>Grade:</strong> 16/20</p>
-                                <p><strong>Period:</strong> 2021 - 2023</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="timeline-item right">
-                        <div class="content">
-                            <h3>Bachelor's in Informatics Engineering</h3>
-                            <span class="year">2022</span>
-                            <div class="info">
-                                <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
-                                <p><strong>Grade:</strong> Currently in progress</p>
-                                <p><strong>Period:</strong> 2022 - Present</p>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Todos os timeline-items como no teu HTML original -->
                 </div>
             </div>
         </section>
@@ -108,80 +65,11 @@
                 <div class="row">
                     <!-- Interests Column -->
                     <div class="column interests">
-                        <h3>Interests</h3>
-                        <div class="interest-item">
-                            <h4>Artificial Intelligence</h4>
-                            <div class="sub-interests">
-                                <ul>
-                                    <li>Computer Vision</li>
-                                    <li>Natural Language Processing</li>
-                                    <li>Deep Learning</li>
-                                    <li>Machine Learning</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="interest-item">
-                            <h4>Data Science</h4>
-                            <div class="sub-interests">
-                                <ul>
-                                    <li>Exploratory Data Analysis</li>
-                                    <li>Data Mining</li>
-                                    <li>Big Data</li>
-                                    <li>Business Intelligence</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="interest-item">
-                            <h4>Computer Graphics</h4>
-                            <div class="sub-interests">
-                                <ul>
-                                    <li>3D Computer Graphics</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="interest-item">
-                            <h4>Data Administration</h4>
-                            <div class="sub-interests">
-                                <ul>
-                                    <li>Data Modelling</li>
-                                    <li>Data Integration</li>
-                                    <li>Database Architecture</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="interest-item">
-                            <h4>UX/UI Design</h4>
-                            <div class="sub-interests">
-                                <ul>
-                                    <li>Design Principles</li>
-                                    <li>Wireframing</li>
-                                    <li>Prototyping</li>
-                                </ul>
-                            </div>
-                        </div>
+                        <!-- Todo o conteúdo de Interests igual ao teu HTML original -->
                     </div>
-
                     <!-- Technical Skills Column -->
                     <div class="column technical-skills">
-                        <h3>Technical Skills</h3>
-                        <div class="skills-grid">
-                            <div class="skill-item"><img src="images/html.png" alt="HTML5"></div>
-                            <div class="skill-item"><img src="images/css3.png" alt="CSS3"></div>
-                            <div class="skill-item"><img src="images/javascript.png" alt="JavaScript"></div>
-                            <div class="skill-item"><img src="images/Python.jpg" alt="Python"></div>
-                            <div class="skill-item"><img src="images/r.png" alt="R"></div>
-                            <div class="skill-item"><img src="images/java.jpg" alt="Java"></div>
-                            <div class="skill-item"><img src="images/c.jpg" alt="C"></div>
-                            <div class="skill-item"><img src="images/SQLServer.png" alt="SQLServer"></div>
-                            <div class="skill-item"><img src="images/oracledatabase.png" alt="OracleDatabase"></div>
-                            <div class="skill-item"><img src="images/powerbi.png" alt="Power BI"></div>
-                            <div class="skill-item"><img src="images/matlab.png" alt="MATLAB"></div>
-                            <div class="skill-item"><img src="images/blender.png" alt="Blender"></div>
-                            <div class="skill-item"><img src="images/gretl.jpg" alt="Gretl"></div>
-                            <div class="skill-item"><img src="images/outsystems.png" alt="Outsystems"></div>
-                            <div class="skill-item"><img src="images/office.png" alt="Office"></div>
-                            <div class="skill-item"><img src="images/uml.png" alt="UML"></div>
-                        </div>
+                        <!-- Todo o conteúdo de Technical Skills igual ao teu HTML original -->
                     </div>
                 </div>
             </div>
@@ -190,38 +78,7 @@
         <!-- Hobbies -->
         <section id="hobbies">
             <div class="container">
-                <h2>Hobbies</h2>
-                <p>I am passionate about photography. Here are some of my shots!</p>
-                <div class="photo-gallery">
-                    <div class="photo">
-                        <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
-                        <div class="photo-description">Aveiro, Portugal</div>
-                    </div>
-                    <div class="photo">
-                        <img src="images/butterfly.jpg" alt="Butterfly">
-                        <div class="photo-description">Butterfly</div>
-                    </div>
-                    <div class="photo">
-                        <img src="images/figueiradafoz1.jpg" alt="Figueira da Foz, Portugal 2018">
-                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
-                    </div>
-                    <div class="photo">
-                        <img src="images/figueiradafoz2.jpg" alt="Figueira da Foz, Portugal 2018">
-                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
-                    </div>
-                    <div class="photo">
-                        <img src="images/lisboa1.jpg" alt="Terreiro do Paço, Lisboa, Portugal 2023">
-                        <div class="photo-description">Terreiro do Paço, Lisboa, Portugal 2023</div>
-                    </div>
-                    <div class="photo">
-                        <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022">
-                        <div class="photo-description">Coimbra, Portugal 2022</div>
-                    </div>
-                    <div class="photo">
-                        <img src="images/serracaramulo.jpg" alt="Serra do Caramulo, Portugal 2020">
-                        <div class="photo-description">Serra do Caramulo, Portugal 2020</div>
-                    </div>
-                </div>
+                <!-- Todo o conteúdo de Hobbies igual ao teu HTML original -->
             </div>
         </section>
 
@@ -239,7 +96,58 @@
                     <button class="filter-btn" onclick="filterProjects('ITManagement')">IT Management</button>
                 </div>
                 <div class="projects-list">
-                    <!-- Todos os project-card conforme o teu HTML original -->
+                    <div class="project-card Statistics" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
+                        <h3>Quantitative Methods in Cryptocurrencies</h3>
+                        <p>Statistical Analysis of 3 Cryptocurrencies</p>
+                    </div>
+                    <div class="project-card BusinessIntelligence" onclick="showPreview('files/SI2PowerBI-Dashboard.pdf')">
+                        <h3>Academic Performance in PowerBI</h3>
+                        <p>Power BI Visualization of Academic Performance of Students and Teachers</p>
+                    </div>
+                    <div class="project-card DataWarehousing" onclick="showPreview('files/SI2Datawarehouse.pdf')">
+                        <h3>Research Report - OLAP and its tools</h3>
+                        <p>Exploring OLAP Tools and Their Application in Decision Support Systems</p>
+                    </div>
+                    <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICModeloCNN.pdf')">
+                        <h3>Analysis of the Problem and Development of a Model with CNN Networks</h3>
+                        <p>Design and Optimization of CNN Models for Multi-Class Classification</p>
+                    </div>
+                    <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICComputacaoSwarm.pdf')">
+                        <h3>Swarm Intelligence</h3>
+                        <p>Nature-Inspired Optimization for Neural Networks</p>
+                    </div>
+                    <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICTransferLearning.pdf')">
+                        <h3>Transfer learning and deployment of neural network models</h3>
+                        <p>Implementation and Application of a Classification Model</p>
+                    </div>
+                    <div class="project-card Statistics" onclick="showPreview('files/ProjetoAED.pdf')">
+                        <h3>Exploratory Data Analysis Project</h3>
+                        <p>Econometric Techniques Applied to the Foreign Exchange and Stock Market</p>
+                    </div>
+                    <div class="project-card ITManagement" onclick="showPreview('files/RelatorioSeB.pdf')">
+                        <h3>eBusiness Systems Project</h3>
+                        <p>Development and Market Analysis</p>
+                    </div>
+                    <div class="project-card Statistics" onclick="showPreview('files/MTIPerformance.pdf')">
+                        <h3>Performance in the Olympic Games</h3>
+                        <p>A Statistical Analysis of the 2022 Winter Olympics</p>
+                    </div>
+                    <div class="project-card BusinessIntelligence" onclick="showPreview('files/BIAnalysis.pdf')">
+                        <h3>Social Media Analytics Tools</h3>
+                        <p>Critical Analysis</p>
+                    </div>
+                    <div class="project-card DataMining" onclick="showPreview('files/DataMining-PrecosGas.pdf')">
+                        <h3>Evolution of Natural Gas Prices in Portugal Compared to EU Countries</h3>
+                        <p>A Data Mining Approach to Price Trends</p>
+                    </div>
+                    <div class="project-card ArtificialIntelligence" onclick="showPreview('files/BDDigitRec.pdf')">
+                        <h3>Handwritten Digit Recognition in Python</h3>
+                        <p>Test of 3 Supervised Learning Algorithms</p>
+                    </div>
+                    <div class="project-card ArtificialIntelligence" onclick="showPreview('files/Thesis_Oleksandra_Kukharska.pdf')">
+                        <h3>Master Thesis</h3>
+                        <p>Artificial Intelligence in Invoice Recognition: A Systematic Literature Review</p>
+                    </div>
                 </div>
                 <div class="file-preview" id="file-preview">
                     <iframe id="file-frame" src="" width="100%" height="500px"></iframe>
