--- a/index.html
+++ b/index.html
@@ -54,7 +54,50 @@
             <div class="container">
                 <h2>Education</h2>
                 <div class="timeline">
-                    <!-- Todos os timeline-items como no teu HTML original -->
+                    <div class="timeline-item left">
+                        <div class="content">
+                            <h3>Bachelor's in Accounting and Auditing</h3>
+                            <span class="year">2017</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 12/20</p>
+                                <p><strong>Period:</strong> 2017 - 2021</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline-item right">
+                        <div class="content">
+                            <h3>Bachelor's in Business Management</h3>
+                            <span class="year">2020</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 12/20</p>
+                                <p><strong>Period:</strong> 2020 - 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline-item left">
+                        <div class="content">
+                            <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
+                            <span class="year">2021</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 16/20</p>
+                                <p><strong>Period:</strong> 2021 - 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline-item right">
+                        <div class="content">
+                            <h3>Bachelor's in Informatics Engineering</h3>
+                            <span class="year">2022</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
+                                <p><strong>Grade:</strong> Currently in progress</p>
+                                <p><strong>Period:</strong> 2022 - Present</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -63,13 +106,69 @@
         <section id="skills-interests">
             <div class="container">
                 <div class="row">
-                    <!-- Interests Column -->
                     <div class="column interests">
-                        <!-- Todo o conteúdo de Interests igual ao teu HTML original -->
+                        <h3>Interests</h3>
+                        <div class="interest-item">
+                            <h4>Artificial Intelligence</h4>
+                            <ul>
+                                <li>Computer Vision</li>
+                                <li>Natural Language Processing</li>
+                                <li>Deep Learning</li>
+                                <li>Machine Learning</li>
+                            </ul>
+                        </div>
+                        <div class="interest-item">
+                            <h4>Data Science</h4>
+                            <ul>
+                                <li>Exploratory Data Analysis</li>
+                                <li>Data Mining</li>
+                                <li>Big Data</li>
+                                <li>Business Intelligence</li>
+                            </ul>
+                        </div>
+                        <div class="interest-item">
+                            <h4>Computer Graphics</h4>
+                            <ul>
+                                <li>3D Computer Graphics</li>
+                            </ul>
+                        </div>
+                        <div class="interest-item">
+                            <h4>Data Administration</h4>
+                            <ul>
+                                <li>Data Modelling</li>
+                                <li>Data Integration</li>
+                                <li>Database Architecture</li>
+                            </ul>
+                        </div>
+                        <div class="interest-item">
+                            <h4>UX/UI Design</h4>
+                            <ul>
+                                <li>Design Principles</li>
+                                <li>Wireframing</li>
+                                <li>Prototyping</li>
+                            </ul>
+                        </div>
                     </div>
-                    <!-- Technical Skills Column -->
                     <div class="column technical-skills">
-                        <!-- Todo o conteúdo de Technical Skills igual ao teu HTML original -->
+                        <h3>Technical Skills</h3>
+                        <div class="skills-grid">
+                            <div class="skill-item"><img src="images/html.png" alt="HTML5"></div>
+                            <div class="skill-item"><img src="images/css3.png" alt="CSS3"></div>
+                            <div class="skill-item"><img src="images/javascript.png" alt="JavaScript"></div>
+                            <div class="skill-item"><img src="images/Python.jpg" alt="Python"></div>
+                            <div class="skill-item"><img src="images/r.png" alt="R"></div>
+                            <div class="skill-item"><img src="images/java.jpg" alt="Java"></div>
+                            <div class="skill-item"><img src="images/c.jpg" alt="C"></div>
+                            <div class="skill-item"><img src="images/SQLServer.png" alt="SQLServer"></div>
+                            <div class="skill-item"><img src="images/oracledatabase.png" alt="OracleDatabase"></div>
+                            <div class="skill-item"><img src="images/powerbi.png" alt="Power BI"></div>
+                            <div class="skill-item"><img src="images/matlab.png" alt="MATLAB"></div>
+                            <div class="skill-item"><img src="images/blender.png" alt="Blender"></div>
+                            <div class="skill-item"><img src="images/gretl.jpg" alt="Gretl"></div>
+                            <div class="skill-item"><img src="images/outsystems.png" alt="Outsystems"></div>
+                            <div class="skill-item"><img src="images/office.png" alt="Office"></div>
+                            <div class="skill-item"><img src="images/uml.png" alt="UML"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -78,7 +177,38 @@
         <!-- Hobbies -->
         <section id="hobbies">
             <div class="container">
-                <!-- Todo o conteúdo de Hobbies igual ao teu HTML original -->
+                <h2>Hobbies</h2>
+                <p>I am passionate about photography. Here are some of my shots!</p>
+                <div class="photo-gallery">
+                    <div class="photo">
+                        <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
+                        <div class="photo-description">Aveiro, Portugal</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/butterfly.jpg" alt="Butterfly">
+                        <div class="photo-description">Butterfly</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/figueiradafoz1.jpg" alt="Figueira da Foz, Portugal 2018">
+                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/figueiradafoz2.jpg" alt="Figueira da Foz, Portugal 2018">
+                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/lisboa1.jpg" alt="Terreiro do Paço, Lisboa, Portugal 2023">
+                        <div class="photo-description">Terreiro do Paço, Lisboa, Portugal 2023</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022">
+                        <div class="photo-description">Coimbra, Portugal 2022</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/serracaramulo.jpg" alt="Serra do Caramulo, Portugal 2020">
+                        <div class="photo-description">Serra do Caramulo, Portugal 2020</div>
+                    </div>
+                </div>
             </div>
         </section>
 
