--- a/index.html
+++ b/index.html
@@ -152,22 +152,22 @@
                     <div class="column technical-skills">
                         <h3>Technical Skills</h3>
                         <div class="skills-grid">
-                            <div class="skill-item"><img src="images/html.png" alt="HTML5"></div>
-                            <div class="skill-item"><img src="images/css3.png" alt="CSS3"></div>
-                            <div class="skill-item"><img src="images/javascript.png" alt="JavaScript"></div>
-                            <div class="skill-item"><img src="images/Python.jpg" alt="Python"></div>
-                            <div class="skill-item"><img src="images/r.png" alt="R"></div>
-                            <div class="skill-item"><img src="images/java.jpg" alt="Java"></div>
-                            <div class="skill-item"><img src="images/c.jpg" alt="C"></div>
-                            <div class="skill-item"><img src="images/SQLServer.png" alt="SQLServer"></div>
-                            <div class="skill-item"><img src="images/oracledatabase.png" alt="OracleDatabase"></div>
-                            <div class="skill-item"><img src="images/powerbi.png" alt="Power BI"></div>
-                            <div class="skill-item"><img src="images/matlab.png" alt="MATLAB"></div>
-                            <div class="skill-item"><img src="images/blender.png" alt="Blender"></div>
-                            <div class="skill-item"><img src="images/gretl.jpg" alt="Gretl"></div>
-                            <div class="skill-item"><img src="images/outsystems.png" alt="Outsystems"></div>
-                            <div class="skill-item"><img src="images/office.png" alt="Office"></div>
-                            <div class="skill-item"><img src="images/uml.png" alt="UML"></div>
+                            <div class="skill-item" data-name="HTML5"><img src="images/html.png" alt="HTML5"></div>
+                            <div class="skill-item" data-name="CSS3"><img src="images/css3.png" alt="CSS3"></div>
+                            <div class="skill-item" data-name="JavaScript"><img src="images/javascript.png" alt="JavaScript"></div>
+                            <div class="skill-item" data-name="Python"><img src="images/Python.jpg" alt="Python"></div>
+                            <div class="skill-item" data-name="R"><img src="images/r.png" alt="R"></div>
+                            <div class="skill-item" data-name="Java"><img src="images/java.jpg" alt="Java"></div>
+                            <div class="skill-item" data-name="C"><img src="images/c.jpg" alt="C"></div>
+                            <div class="skill-item" data-name="SQL Server"><img src="images/SQLServer.png" alt="SQLServer"></div>
+                            <div class="skill-item" data-name="Oracle Database"><img src="images/oracledatabase.png" alt="OracleDatabase"></div>
+                            <div class="skill-item" data-name="Power BI"><img src="images/powerbi.png" alt="Power BI"></div>
+                            <div class="skill-item" data-name="MATLAB"><img src="images/matlab.png" alt="MATLAB"></div>
+                            <div class="skill-item" data-name="Blender"><img src="images/blender.png" alt="Blender"></div>
+                            <div class="skill-item" data-name="Gretl"><img src="images/gretl.jpg" alt="Gretl"></div>
+                            <div class="skill-item" data-name="OutSystems"><img src="images/outsystems.png" alt="Outsystems"></div>
+                            <div class="skill-item" data-name="Office"><img src="images/office.png" alt="Office"></div>
+                            <div class="skill-item" data-name="UML"><img src="images/uml.png" alt="UML"></div>
                         </div>
                     </div>
                 </div>
@@ -180,33 +180,26 @@
                 <h2>Hobbies</h2>
                 <p>I am passionate about photography. Here are some of my shots!</p>
                 <div class="photo-gallery">
-                    <div class="photo">
+                    <div class="photo" data-name="Aveiro, Portugal">
                         <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
-                        <div class="photo-description">Aveiro, Portugal</div>
                     </div>
-                    <div class="photo">
+                    <div class="photo" data-name="Butterfly">
                         <img src="images/butterfly.jpg" alt="Butterfly">
-                        <div class="photo-description">Butterfly</div>
                     </div>
-                    <div class="photo">
+                    <div class="photo" data-name="Figueira da Foz, Portugal 2018">
                         <img src="images/figueiradafoz1.jpg" alt="Figueira da Foz, Portugal 2018">
-                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
                     </div>
-                    <div class="photo">
+                    <div class="photo" data-name="Figueira da Foz, Portugal 2018">
                         <img src="images/figueiradafoz2.jpg" alt="Figueira da Foz, Portugal 2018">
-                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
                     </div>
-                    <div class="photo">
+                    <div class="photo" data-name="Terreiro do Paço, Lisboa, Portugal 2023">
                         <img src="images/lisboa1.jpg" alt="Terreiro do Paço, Lisboa, Portugal 2023">
-                        <div class="photo-description">Terreiro do Paço, Lisboa, Portugal 2023</div>
                     </div>
-                    <div class="photo">
+                    <div class="photo" data-name="Coimbra, Portugal 2022">
                         <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022">
-                        <div class="photo-description">Coimbra, Portugal 2022</div>
                     </div>
-                    <div class="photo">
+                    <div class="photo" data-name="Serra do Caramulo, Portugal 2020">
                         <img src="images/serracaramulo.jpg" alt="Serra do Caramulo, Portugal 2020">
-                        <div class="photo-description">Serra do Caramulo, Portugal 2020</div>
                     </div>
                 </div>
             </div>
@@ -290,13 +283,4 @@
             <div class="container">
                 <h2>Contact</h2>
                 <p>Email: <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">
-                    https://www.linkedin.com/in/oleksandra-kukharska
-                </a></p>
-            </div>
-        </section>
-
-    </div>
-
-</body>
-</html>
+                <p>LinkedIn:
