--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                         <li>🇺🇦 Ukrainian – C1</li>
                         <li>🇷🇺 Russian – B2</li>
                         <li>🇪🇸 Spanish – B1</li>
-                        <li>🇰🇷 Korean – Topik 1</li>
                     </ul>
                 </div>
             </div>
@@ -95,6 +94,17 @@
                                 <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
                                 <p><strong>Grade:</strong> Currently in progress</p>
                                 <p><strong>Period:</strong> 2022 - Present</p>
+                            </div>
+                        </div>
+                    </div>
+                      <div class="timeline-item right">
+                        <div class="content">
+                            <h3>Bachelor's in Computer Engineering (Erasmus+)</h3>
+                            <span class="year">2025</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Lodz University of Technology</p>
+                                <p><strong>Grade:</strong> Currently in progress</p>
+                                <p><strong>Period:</strong> 2025 - Present</p>
                             </div>
                         </div>
                     </div>
