--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#about" class="active">About Me</a></li>
                 <li><a href="#academic">Education</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills-interests">Insights</a></li>
+                <li><a href="#skills-interests">Skills & Passions</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -33,9 +33,15 @@
                 <img src="images/Aboutme.jpg" alt="My Photo">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began. I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology. At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br><br>
-                    During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing. While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management. For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business. After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
-                    On this webpage, you can explore some of my projects, interests, and hobbies.<br></p>
+                    <p>I was born in Ukraine and moved to Portugal at the age of six.
+                        When I was eleven, I got my first computer, and that’s where it all began.
+                        I started creating HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology.
+                        Although I set it aside for a while, the curiosity never really faded.
+                        When the time came to choose a degree, I wasn’t entirely sure of the path I wanted to follow.
+                        I first pursued a Bachelor’s in Accounting and Auditing, then a Bachelor’s in Business Management.
+                        Later, I completed a Master’s in Data Analysis and Decision Supporting Systems, where I was able to connect my business background with technology.
+                        To deepen my technical expertise, I’m now pursuing a Bachelor’s in Informatics Engineering.
+                        With this mix of business and technical knowledge, I’m building a career focused on data, programming, and intelligent systems.<br><br><br></p>
                     <h4>Language Proficiency</h4>
                     <ul style="font-size: 12px;">
                         <li>🇵🇹 Portuguese – C2</li>
