--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                     <p>I was born in Ukraine and moved to Portugal at the age of six.
                         When I was eleven, I got my first computer, and that’s where it all began.
                         I started creating HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology.
-                        Although I set it aside for a while, the curiosity never really faded.
+                        Although I set it aside for a while, the curiosity never really faded.<br>
                         When the time came to choose a degree, I wasn’t entirely sure of the path I wanted to follow.
                         I first pursued a Bachelor’s in Accounting and Auditing, then a Bachelor’s in Business Management.
                         Later, I completed a Master’s in Data Analysis and Decision Supporting Systems, where I was able to connect my business background with technology.
                         To deepen my technical expertise, I’m now pursuing a Bachelor’s in Informatics Engineering.
-                        With this mix of business and technical knowledge, I’m building a career focused on data, programming, and intelligent systems.<br><br><br></p>
+                        With this mix of business and technical knowledge, I’m building a career focused on data, programming, and intelligent systems.<br><br></p>
                     <h4>Language Proficiency</h4>
                     <ul style="font-size: 12px;">
                         <li>🇵🇹 Portuguese – C2</li>
