--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         When the time came to choose a degree, I wasn’t entirely sure of the path I wanted to follow.
                         I first pursued a Bachelor’s in Accounting and Auditing, then a Bachelor’s in Business Management.
                         Later, I completed a Master’s in Data Analysis and Decision Supporting Systems, where I was able to connect my business background with technology.
-                        To deepen my technical expertise, I’m now pursuing a Bachelor’s in Informatics Engineering.
+                        To deepen my technical expertise, I’m now pursuing a Bachelor’s in Informatics Engineering.<br>
                         With this mix of business and technical knowledge, I’m building a career focused on data, programming, and intelligent systems.<br><br></p>
                     <h4>Language Proficiency</h4>
                     <ul style="font-size: 12px;">
