--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </div>
-                      <div class="timeline-item right">
+                      <div class="timeline-item left">
                         <div class="content">
                             <h3>Bachelor's in Computer Engineering (Erasmus+)</h3>
                             <span class="year">2025</span>
