--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
                         <div class="interest-item">
                             <h4>UX/UI Design</h4>
                             <ul>
-                                <li>Design Principles</li>
+                                <li>Visual Design & Typography</li>
                                 <li>Wireframing</li>
-                                <li>Prototyping</li>
                             </ul>
                         </div>
                     </div>
