--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="column technical-skills">
                         <h3>Technical Skills</h3>
                         <div class="skills-grid">
-                            <div class="skill-item" data-name="HTML5"><img src="images/html.png" alt="HTML5"></div>
+                            <div class="skill-item" data-name="HTML5"><img src="images/html.jpg" alt="HTML5"></div>
                             <div class="skill-item" data-name="CSS3"><img src="images/css3.png" alt="CSS3"></div>
                             <div class="skill-item" data-name="JavaScript"><img src="images/javascript.png" alt="JavaScript"></div>
                             <div class="skill-item" data-name="Python"><img src="images/Python.jpg" alt="Python"></div>
