--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <div class="skill-item" data-name="HTML5"><img src="images/html.png" alt="HTML5"></div>
                             <div class="skill-item" data-name="CSS3"><img src="images/css3.png" alt="CSS3"></div>
                             <div class="skill-item" data-name="JavaScript"><img src="images/javascript.png" alt="JavaScript"></div>
-                            <div class="skill-item" data-name="Python"><img src="images/Python.jpg" alt="Python"></div>
+                            <div class="skill-item" data-name="Python"><img src="images/Python.png" alt="Python"></div>
                             <div class="skill-item" data-name="R"><img src="images/r.png" alt="R"></div>
                             <div class="skill-item" data-name="Java"><img src="images/java.jpg" alt="Java"></div>
                             <div class="skill-item" data-name="C"><img src="images/c.jpg" alt="C"></div>
