--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="skill-item" data-name="Python"><img src="images/Python.png" alt="Python"></div>
                             <div class="skill-item" data-name="R"><img src="images/r.png" alt="R"></div>
                             <div class="skill-item" data-name="Java"><img src="images/java.png" alt="Java"></div>
-                            <div class="skill-item" data-name="C"><img src="images/c.jpg" alt="C"></div>
+                            <div class="skill-item" data-name="C"><img src="images/c.png" alt="C"></div>
                             <div class="skill-item" data-name="SQL Server"><img src="images/SQLServer.png" alt="SQLServer"></div>
                             <div class="skill-item" data-name="Oracle Database"><img src="images/oracledatabase.png" alt="OracleDatabase"></div>
                             <div class="skill-item" data-name="Power BI"><img src="images/powerbi.png" alt="Power BI"></div>
