--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <div class="skill-item" data-name="Power BI"><img src="images/powerbi.png" alt="Power BI"></div>
                             <div class="skill-item" data-name="MATLAB"><img src="images/matlab.png" alt="MATLAB"></div>
                             <div class="skill-item" data-name="Blender"><img src="images/blender.png" alt="Blender"></div>
-                            <div class="skill-item" data-name="Gretl"><img src="images/gretl.jpg" alt="Gretl"></div>
+                            <div class="skill-item" data-name="C++"><img src="images/c++.png" alt="C++"></div>
                             <div class="skill-item" data-name="OutSystems"><img src="images/outsystems.png" alt="Outsystems"></div>
                             <div class="skill-item" data-name="Office"><img src="images/office.png" alt="Office"></div>
                             <div class="skill-item" data-name="UML"><img src="images/uml.png" alt="UML"></div>
