--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="container">
                 <div class="row">
                     <div class="column interests">
-                        <h3>Interests</h3>
+                        <h3>What Inspires Me</h3>
                         <div class="interest-item">
                             <h4>Artificial Intelligence</h4>
                             <ul>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="column technical-skills">
-                        <h3>Technical Skills</h3>
+                        <h3>What I Build With</h3>
                         <div class="skills-grid">
                             <div class="skill-item" data-name="HTML5"><img src="images/html.png" alt="HTML5"></div>
                             <div class="skill-item" data-name="CSS3"><img src="images/css3.png" alt="CSS3"></div>
